Enhance donation page with typing animation, receipt download, and improved validation; update home page layout and animations; add Our Work page detailing rescue efforts and CSR partnerships.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,9 @@
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
+    "jspdf": "^3.0.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
     "nodemailer": "^6.10.1",
@@ -38,11 +39,17 @@
     "react-spinners": "^0.15.0",
     "react-three-fiber": "^6.0.13",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
     "react-vertical-timeline-component": "^3.5.3",
     "recharts": "^2.15.2",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
